updater/requirement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: updater-deployment
  namespace: cicd
  labels:
    app: updater
spec:
  replicas: 1
  selector:
    matchLabels:
      app: updater
  template:
    metadata:
      labels:
        app: updater
    spec:
      serviceAccountName: updater
      containers:
      - name: updater
        image: sprawlers/updater:b66ba1ea6f34cd628060a751ca56cbb0e6bb1c7e
        ports:
        - containerPort: 80
        livenessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /health
            port: 80
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /health
            port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: updater-service
  namespace: cicd
spec:
  selector:
    app: updater
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: updater-ingress
  namespace: cicd
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  tls:
  - hosts:
    - updater.sprawl.team
    secretName: updater-tls
  rules:
  - host: updater.sprawl.team
    http:
      paths:
      - backend:
          serviceName: updater-service
          servicePort: 80
